Сделал много всего. Делить на атомарные слишком сложно, да и не особо нужно, никто же не будет тут следить за историей коммитов.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
 
-        <activity
-            android:name=".activities.MainActivity"
-            android:label="@string/activity_main_title"
-            android:launchMode="singleInstance">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,5 +25,9 @@
         <activity
             android:name=".activities.SavedActivity"
             android:label="@string/activity_save_title" />
+
+        <activity
+            android:name=".activities.AboutActivity"
+            android:label="@string/activity_about_title" />
     </application>
 </manifest>
