--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
 
     // RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
 }
