Вынес настройку визуала свайпов в конфигураторы, чтобы помимо бизнес логики свайпов можно было управть отображением в непосредственной близости от активити.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
 
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,15 +19,15 @@
         </activity>
 
         <activity
-            android:name=".activities.HistoryActivity"
+            android:name=".activities.history.HistoryActivity"
             android:label="@string/activity_history_title" />
 
         <activity
-            android:name=".activities.SavedActivity"
+            android:name=".activities.saved.SavedActivity"
             android:label="@string/activity_save_title" />
 
         <activity
-            android:name=".activities.AboutActivity"
+            android:name=".activities.about.AboutActivity"
             android:label="@string/activity_about_title" />
     </application>
 </manifest>
